# smeval

./: Cargo.toml  readme.md
docs/: Tasks.todo
src/: lib.rs  main.rs  smeval.rs
src/interpreter/: interpreter.rs  lexer.rs  mod.rs  nodes.rs  parser.rs  tokens.rs
