[package]
name = "smeval"
version = "0.1.0"
authors = ["Joeyrp <jrpollack107@gmail.com>"]
edition = "2018"
description = "A Simple Math Evaluator. Based on this tutorial https://www.youtube.com/watch?v=tczjDCbykyM"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
